# configloader

./: .gitignore  License.md  MANIFEST.in  Readme.md  setup.cfg
configloader/: __init__.py  config_loader.py
test/: test.py  test.yaml
