[metadata]
name = configloader
version = 1.0.0
author = anfema GmbH
author_email = admin@anfe.ma
description = Config file loader
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
url = https://github.com/anfema/configloader
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable
    License :: MIT
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
keywords = ION, Wagtail, API, Adapter

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    pyyaml==6.0

[options.packages.find]
exclude =

[flake8]
extend-exclude = locale,templates,migrations
max-line-length = 120
